Added header and footer to application.html.erb

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,6 +14,14 @@
   </head>
 
   <body>
+    <header>
+      <nav>
+          <h1>Zack</h1>
+        </nav>
+    </header>
     <%= yield %>
+    <footer>
+      <div class="social-media"></div>
+    </footer>
   </body>
 </html>
