Created nav items

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,10 +16,17 @@
   <body>
     <header>
       <nav>
-          <h1>Zack</h1>
-        </nav>
+        <ul>
+          <li><%= link_to 'Welcome', root_path %></li>
+          <li><%= link_to 'Portfolio', portfolio_path %></li>
+        </ul>
+      </nav>
     </header>
-    <%= yield %>
+
+    <div class="container">
+      <%= yield %>
+    </div>
+
     <footer>
       <div class="social-media"></div>
     </footer>
