--- a/app/views/pages/portfolio.html.erb
+++ b/app/views/pages/portfolio.html.erb
@@ -1,1 +1,5 @@
-<h1>Portfolio</h1>
+<div class="row">
+	<div class="col-sm-4">hi</div>
+	<div class="col-sm-4">hi</div>
+	<div class="col-sm-4">hi</div>
+</div>
