Added classes to all elements

--- a/app/views/pages/welcome.html.erb
+++ b/app/views/pages/welcome.html.erb
@@ -1,4 +1,4 @@
-<main>
+<main class="welcome">
 	<p>I'm a Frontend Web Dev</p>
-	<button>View My Work</button>
+	<%= button_to "View My Work", portfolio_path, :method => "get",  %>
 </main>
