--- a/app/views/pages/portfolio.html.erb
+++ b/app/views/pages/portfolio.html.erb
@@ -1,5 +1,28 @@
-<div class="row">
-	<div class="col-sm-4">hi</div>
-	<div class="col-sm-4">hi</div>
-	<div class="col-sm-4">hi</div>
-</div>
+<main class="portfolio">
+	<div class="row">
+		<div class="col-sm-4 portfolio__thumbnail-container">
+			<%= image_tag("bass-music.png", :alt => "rss feed", class: 'portfolio__thumbnail') %>
+		</div>
+		<div class="col-sm-4 portfolio__thumbnail-container">
+			<%= image_tag("bolt-network.png", :alt => "rss feed", class: 'portfolio__thumbnail') %>
+		</div>
+		<div class="col-sm-4 portfolio__thumbnail-container">
+			<%= image_tag("bookmarks.png", :alt => "rss feed", class: 'portfolio__thumbnail') %>
+		</div>
+		<div class="col-sm-4 portfolio__thumbnail-container">
+			<%= image_tag("innovation-cloud.png", :alt => "rss feed", class: 'portfolio__thumbnail') %>
+		</div>
+		<div class="col-sm-4 portfolio__thumbnail-container">
+			<%= image_tag("messenger-app.png", :alt => "rss feed", class: 'portfolio__thumbnail') %>
+		</div>
+		<div class="col-sm-4 portfolio__thumbnail-container">
+			<%= image_tag("movie-app.png", :alt => "rss feed", class: 'portfolio__thumbnail') %>
+		</div>
+		<div class="col-sm-4 portfolio__thumbnail-container">
+			<%= image_tag("threadly.png", :alt => "rss feed", class: 'portfolio__thumbnail') %>
+		</div>
+		<div class="col-sm-4 portfolio__thumbnail-container">
+			<%= image_tag("traveler-app.png", :alt => "rss feed", class: 'portfolio__thumbnail') %>
+		</div>
+	</div>
+</main>
