Added great looking cards to portfolio page

--- a/app/views/pages/welcome.html.erb
+++ b/app/views/pages/welcome.html.erb
@@ -1,4 +1,4 @@
 <main class="welcome">
 	<p>I'm a Frontend Web Dev</p>
-	<%= button_to "View My Work", portfolio_path, :method => "get",  %>
+	<%= button_to "View My Work", portfolio_path, :method => "get"  %>
 </main>
