--- a/app/views/pages/portfolio.html.erb
+++ b/app/views/pages/portfolio.html.erb
@@ -1,51 +1,166 @@
 <main class="portfolio">
 	<div class="row">
 		<div class="col-sm-6 col-lg-4">
-			<div class="portfolio__thumbnail-container">
-				<%= image_tag("bass-music.png", :alt => "rss feed", class: 'portfolio__thumbnail') %>
-				<h2>hi</h2>
+			<div class="card card--info">
+				<div class="card__img-top-container">
+					<%= image_tag("bass-music.png", :alt => "rss feed", class: 'card__img-top') %>
+				</div>
+				<div class="card__block">
+					<h4 class="card__title mt-3">Bass Music</h4>
+					<div class="meta card__text card__text--source-container">
+						<a class="card__source"></a>
+						<span class="card__date">May, 2019</span>
+					</div>
+					<div class="card__text card__text--description">A bootstrap music app with CRUD functionality</div>
+				</div>
+				<div class="card__footer">
+					<small class="card__ticker">Rails,</small>
+					<small class="card__ticker">Bootstrap</small>
+					<button class="btn btn-info float-right btn-sm card__btn--open">OPEN</button>
+				</div>
 			</div>
 		</div>
 		<div class="col-sm-6 col-lg-4">
-			<div class="portfolio__thumbnail-container">
-				<%= image_tag("bolt-network.png", :alt => "rss feed", class: 'portfolio__thumbnail') %>
-				<h2>hi</h2>
+			<div class="card card--info">
+				<div class="card__img-top-container">
+					<%= image_tag("bolt-network.png", :alt => "rss feed", class: 'card__img-top') %>
+				</div>
+				<div class="card__block">
+					<h4 class="card__title mt-3">Bolt Network</h4>
+					<div class="meta card__text card__text--source-container">
+						<a class="card__source"></a>
+						<span class="card__date">May, 2019</span>
+					</div>
+					<div class="card__text card__text--description">A bootstrap Rails app with simple routing</div>
+				</div>
+				<div class="card__footer">
+					<small class="card__ticker">Rails,</small>
+					<small class="card__ticker">Bootstrap</small>
+					<button class="btn btn-info float-right btn-sm card__btn--open">OPEN</button>
+				</div>
 			</div>
 		</div>
 		<div class="col-sm-6 col-lg-4">
-			<div class="portfolio__thumbnail-container">
-				<%= image_tag("bookmarks.png", :alt => "rss feed", class: 'portfolio__thumbnail') %>
-				<h2>hi</h2>
+			<div class="card card--info">
+				<div class="card__img-top-container">
+					<%= image_tag("bookmarks.png", :alt => "rss feed", class: 'card__img-top') %>
+				</div>
+				<div class="card__block">
+					<h4 class="card__title mt-3">Bookmarks</h4>
+					<div class="meta card__text card__text--source-container">
+						<a class="card__source"></a>
+						<span class="card__date">May, 2019</span>
+					</div>
+					<div class="card__text card__text--description">A simple book ranking app with index and show pages.</div>
+				</div>
+				<div class="card__footer">
+					<small class="card__ticker">Rails,</small>
+					<small class="card__ticker">sqlite3</small>
+					<button class="btn btn-info float-right btn-sm card__btn--open">OPEN</button>
+				</div>
 			</div>
 		</div>
 		<div class="col-sm-6 col-lg-4">
-			<div class="portfolio__thumbnail-container">
-				<%= image_tag("innovation-cloud.png", :alt => "rss feed", class: 'portfolio__thumbnail') %>
-				<h2>hi</h2>
+			<div class="card card--info">
+				<div class="card__img-top-container">
+					<%= image_tag("innovation-cloud.png", :alt => "rss feed", class: 'card__img-top') %>
+				</div>
+				<div class="card__block">
+					<h4 class="card__title mt-3">Innovation Cloud</h4>
+					<div class="meta card__text card__text--source-container">
+						<a class="card__source"></a>
+						<span class="card__date">May, 2019</span>
+					</div>
+					<div class="card__text card__text--description">A single-page site utilizing database posting</div>
+				</div>
+				<div class="card__footer">
+					<small class="card__ticker">Rails,</small>
+					<small class="card__ticker">Bootstrap,</small>
+					<small class="card__ticker">sqlite3</small>
+					<button class="btn btn-info float-right btn-sm card__btn--open">OPEN</button>
+				</div>
 			</div>
 		</div>
 		<div class="col-sm-6 col-lg-4">
-			<div class="portfolio__thumbnail-container">
-				<%= image_tag("messenger-app.png", :alt => "rss feed", class: 'portfolio__thumbnail') %>
-				<h2>hi</h2>
+			<div class="card card--info">
+				<div class="card__img-top-container">
+					<%= image_tag("messenger-app.png", :alt => "rss feed", class: 'card__img-top') %>
+				</div>
+				<div class="card__block">
+					<h4 class="card__title mt-3">Messenger</h4>
+					<div class="meta card__text card__text--source-container">
+						<a class="card__source"></a>
+						<span class="card__date">May, 2019</span>
+					</div>
+					<div class="card__text card__text--description">A simple, yet beautiful, messenger app</div>
+				</div>
+				<div class="card__footer">
+					<small class="card__ticker">Rails,</small>
+					<small class="card__ticker">Bootstrap,</small>
+					<small class="card__ticker">sqlite3</small>
+					<button class="btn btn-info float-right btn-sm card__btn--open">OPEN</button>
+				</div>
 			</div>
 		</div>
 		<div class="col-sm-6 col-lg-4">
-			<div class="portfolio__thumbnail-container">
-				<%= image_tag("movie-app.png", :alt => "rss feed", class: 'portfolio__thumbnail') %>
-				<h2>hi</h2>
+			<div class="card card--info">
+				<div class="card__img-top-container">
+					<%= image_tag("movie-app.png", :alt => "rss feed", class: 'card__img-top') %>
+				</div>
+				<div class="card__block">
+					<h4 class="card__title mt-3">Movie App</h4>
+					<div class="meta card__text card__text--source-container">
+						<a class="card__source"></a>
+						<span class="card__date">May, 2019</span>
+					</div>
+					<div class="card__text card__text--description">An IMDB-like app showcasing many-to-many db relationships</div>
+				</div>
+				<div class="card__footer">
+					<small class="card__ticker">Rails,</small>
+					<small class="card__ticker">Bootstrap,</small>
+					<small class="card__ticker">sqlite3</small>
+					<button class="btn btn-info float-right btn-sm card__btn--open">OPEN</button>
+				</div>
 			</div>
 		</div>
 		<div class="col-sm-6 col-lg-4">
-			<div class="portfolio__thumbnail-container">
-				<%= image_tag("threadly.png", :alt => "rss feed", class: 'portfolio__thumbnail') %>
-				<h2>hi</h2>
+			<div class="card card--info">
+				<div class="card__img-top-container">
+					<%= image_tag("threadly.png", :alt => "rss feed", class: 'card__img-top') %>
+				</div>
+				<div class="card__block">
+					<h4 class="card__title mt-3">Threadly</h4>
+					<div class="meta card__text card__text--source-container">
+						<a class="card__source"></a>
+						<span class="card__date">May, 2019</span>
+					</div>
+					<div class="card__text card__text--description">A sick single-page messaging app</div>
+				</div>
+				<div class="card__footer">
+					<small class="card__ticker">Rails,</small>
+					<small class="card__ticker">sqlite3</small>
+					<button class="btn btn-info float-right btn-sm card__btn--open">OPEN</button>
+				</div>
 			</div>
 		</div>
 		<div class="col-sm-6 col-lg-4">
-			<div class="portfolio__thumbnail-container">
-				<%= image_tag("traveler-app.png", :alt => "rss feed", class: 'portfolio__thumbnail') %>
-				<h2>hi</h2>
+			<div class="card card--info">
+				<div class="card__img-top-container">
+					<%= image_tag("traveler-app.png", :alt => "rss feed", class: 'card__img-top') %>
+				</div>
+				<div class="card__block">
+					<h4 class="card__title mt-3">BokenjiKan</h4>
+					<div class="meta card__text card__text--source-container">
+						<a class="card__source"></a>
+						<span class="card__date">May, 2019</span>
+					</div>
+					<div class="card__text card__text--description">A travel application showcasing CRUD functionality</div>
+				</div>
+				<div class="card__footer">
+					<small class="card__ticker">Rails,</small>
+					<small class="card__ticker">Bootstrap</small>
+					<button class="btn btn-info float-right btn-sm card__btn--open">OPEN</button>
+				</div>
 			</div>
 		</div>
 	</div>
