--- a/app/views/layouts/navigation/_navbar.html.erb
+++ b/app/views/layouts/navigation/_navbar.html.erb
@@ -1,5 +1,5 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-  <a class="navbar-brand" href="#">Portfolio</a>
+  <a class="navbar-brand" href="#">Welcome to my Tutorial Portfolio</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
@@ -7,7 +7,6 @@
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
   	<ul class="navbar-nav">
       <li class="nav-item"><%= link_to 'Welcome', root_path %></li>
-      <li class="nav-item"><%= link_to 'Portfolio', portfolio_path %></li>
   	</ul>
   </div>
 </nav>
