Removed navbar, replaced it with header

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,9 +15,7 @@
   </head>
 
   <body>
-    <header>
-      <%= render 'layouts/navigation/navbar' %>
-    </header>
+    <%= render 'layouts/header/header' %>
 
     <div class="container">
       <%= yield %>
