--- a/app/views/layouts/header/_header.html.erb
+++ b/app/views/layouts/header/_header.html.erb
@@ -1,7 +1,10 @@
 <header>
   <div class="row">
-    <div class="col-sm-12">
-      <div class="field">Hi there</div>
+    <div class="col-sm-12 welcome">
+      <h1 class="welcome__main-message">Welcome to my Rails Tutorials Portfolio</h1>
+      <h3 class="welcome__sub-message">
+      	All apps below are built following CodeCademy's step-by-step walkthroughs
+      </h3>
     </div>
   </div>
 </header>
