--- a/app/assets/stylesheets/_cards.scss
+++ b/app/assets/stylesheets/_cards.scss
@@ -7,6 +7,7 @@
 	border: none;
 	border-radius: .28571429rem;
 	box-shadow: 1.5px 1.5px 7px $light-box-shadow;
+	margin-bottom: 3rem;
 
 	.card__block {
 		font-size: 1em;
