--- a/app/assets/stylesheets/_header.scss
+++ b/app/assets/stylesheets/_header.scss
@@ -4,11 +4,13 @@
 
 header {
 	border-top: solid .4rem $brand-teal;
-	padding: 18rem 15rem;
+	padding: 20rem 15rem;
 	background: $background-gradient;
 	color: $white;
 	text-align: center;
-	margin-bottom: -5rem;
+	margin-bottom: -6rem;
+	-webkit-clip-path: $main-img-slant;
+	clip-path: $main-img-slant;
 
 	.welcome {
 		.welcome__main-message {
