Layout tweeked for mobile and tablet

--- a/app/assets/stylesheets/_header.scss
+++ b/app/assets/stylesheets/_header.scss
@@ -4,7 +4,16 @@
 
 header {
 	border-top: solid .4rem $brand-teal;
-	padding: 20rem 15rem;
+	padding: 20rem 6rem;
+	@media (max-width: 992px) {
+		padding: 17rem 6rem;
+	}
+	@media (max-width: 768px) {
+		padding: 14rem 4rem;
+	}
+	@media (max-width: 568px) {
+		padding: 10rem 2rem;
+	}
 	background: $background-gradient;
 	color: $white;
 	text-align: center;
@@ -15,9 +24,18 @@ header {
 	.welcome {
 		.welcome__main-message {
 			font-size: 5rem;
+			@media (max-width: 992px) {
+				font-size: 4rem;
+			}
+			@media (max-width: 768px) {
+				font-size: 3.2rem;
+			}
 		}
 		.welcome__sub-message {
 			font-size: 2.5rem;
+			@media (max-width: 992px) {
+				font-size: 2.3rem;
+			}
 			font-weight: 100;
 			letter-spacing: .05rem;
 		}
