--- a/app/views/pages/portfolio.html.erb
+++ b/app/views/pages/portfolio.html.erb
@@ -1,6 +1,6 @@
 <main class="portfolio">
 	<div class="row">
-		<div class="col-sm-6 col-lg-4">
+		<div class="col-xs-12 col-md-6 col-lg-4">
 			<div class="card card--info">
 				<div class="card__img-top-container">
 					<%= image_tag("bass-music.png", :alt => "rss feed", class: 'card__img-top') %>
@@ -20,7 +20,7 @@
 				</div>
 			</div>
 		</div>
-		<div class="col-sm-6 col-lg-4">
+		<div class="col-xs-12 col-md-6 col-lg-4">
 			<div class="card card--info">
 				<div class="card__img-top-container">
 					<%= image_tag("bolt-network.png", :alt => "rss feed", class: 'card__img-top') %>
@@ -40,7 +40,7 @@
 				</div>
 			</div>
 		</div>
-		<div class="col-sm-6 col-lg-4">
+		<div class="col-xs-12 col-md-6 col-lg-4">
 			<div class="card card--info">
 				<div class="card__img-top-container">
 					<%= image_tag("bookmarks.png", :alt => "rss feed", class: 'card__img-top') %>
@@ -60,7 +60,7 @@
 				</div>
 			</div>
 		</div>
-		<div class="col-sm-6 col-lg-4">
+		<div class="col-xs-12 col-md-6 col-lg-4">
 			<div class="card card--info">
 				<div class="card__img-top-container">
 					<%= image_tag("innovation-cloud.png", :alt => "rss feed", class: 'card__img-top') %>
@@ -81,7 +81,7 @@
 				</div>
 			</div>
 		</div>
-		<div class="col-sm-6 col-lg-4">
+		<div class="col-xs-12 col-md-6 col-lg-4">
 			<div class="card card--info">
 				<div class="card__img-top-container">
 					<%= image_tag("messenger-app.png", :alt => "rss feed", class: 'card__img-top') %>
@@ -102,7 +102,7 @@
 				</div>
 			</div>
 		</div>
-		<div class="col-sm-6 col-lg-4">
+		<div class="col-xs-12 col-md-6 col-lg-4">
 			<div class="card card--info">
 				<div class="card__img-top-container">
 					<%= image_tag("movie-app.png", :alt => "rss feed", class: 'card__img-top') %>
@@ -123,7 +123,7 @@
 				</div>
 			</div>
 		</div>
-		<div class="col-sm-6 col-lg-4">
+		<div class="col-xs-12 col-md-6 col-lg-4">
 			<div class="card card--info">
 				<div class="card__img-top-container">
 					<%= image_tag("threadly.png", :alt => "rss feed", class: 'card__img-top') %>
@@ -143,7 +143,7 @@
 				</div>
 			</div>
 		</div>
-		<div class="col-sm-6 col-lg-4">
+		<div class="col-xs-12 col-md-6 col-lg-4">
 			<div class="card card--info">
 				<div class="card__img-top-container">
 					<%= image_tag("traveler-app.png", :alt => "rss feed", class: 'card__img-top') %>
