--- a/app/views/pages/portfolio.html.erb
+++ b/app/views/pages/portfolio.html.erb
@@ -104,9 +104,11 @@
 		</div>
 		<div class="col-xs-12 col-md-6 col-lg-4">
 			<div class="card card--info">
-				<div class="card__img-top-container">
-					<%= image_tag("movie-app.png", :alt => "rss feed", class: 'card__img-top') %>
-				</div>
+				<a href="https://aqueous-atoll-39240.herokuapp.com/" target="_blank">
+					<div class="card__img-top-container">
+						<%= image_tag("movie-app.png", :alt => "rss feed", class: 'card__img-top') %>
+					</div>
+				</a>
 				<div class="card__block">
 					<h4 class="card__title mt-3">Movie App</h4>
 					<div class="meta card__text card__text--source-container">
@@ -119,7 +121,9 @@
 					<small class="card__ticker">Rails,</small>
 					<small class="card__ticker">Bootstrap,</small>
 					<small class="card__ticker">sqlite3</small>
-					<button class="btn btn-info float-right btn-sm card__btn--open">OPEN</button>
+					<a href="https://aqueous-atoll-39240.herokuapp.com/" target="_blank">
+						<button class="btn btn-info float-right btn-sm card__btn--open">OPEN</button>
+					</a>
 				</div>
 			</div>
 		</div>
