added bass-music link

--- a/app/views/pages/portfolio.html.erb
+++ b/app/views/pages/portfolio.html.erb
@@ -3,7 +3,9 @@
 		<div class="col-xs-12 col-md-6 col-lg-4">
 			<div class="card card--info">
 				<div class="card__img-top-container">
-					<%= image_tag("bass-music.png", :alt => "rss feed", class: 'card__img-top') %>
+					<a href="https://frozen-brushlands-73275.herokuapp.com/">
+						<%= image_tag("bass-music.png", :alt => "rss feed", class: 'card__img-top') %>
+					</a>
 				</div>
 				<div class="card__block">
 					<h4 class="card__title mt-3">Bass Music</h4>
@@ -16,7 +18,9 @@
 				<div class="card__footer">
 					<small class="card__ticker">Rails,</small>
 					<small class="card__ticker">Bootstrap</small>
-					<button class="btn btn-info float-right btn-sm card__btn--open">OPEN</button>
+					<a href="https://frozen-brushlands-73275.herokuapp.com/">
+						<button class="btn btn-info float-right btn-sm card__btn--open">OPEN</button>
+					</a>
 				</div>
 			</div>
 		</div>
