Added _blank links

--- a/app/views/pages/portfolio.html.erb
+++ b/app/views/pages/portfolio.html.erb
@@ -3,7 +3,7 @@
 		<div class="col-xs-12 col-md-6 col-lg-4">
 			<div class="card card--info">
 				<div class="card__img-top-container">
-					<a href="https://frozen-brushlands-73275.herokuapp.com/">
+					<a href="https://frozen-brushlands-73275.herokuapp.com/" target="_blank">
 						<%= image_tag("bass-music.png", :alt => "rss feed", class: 'card__img-top') %>
 					</a>
 				</div>
@@ -18,7 +18,7 @@
 				<div class="card__footer">
 					<small class="card__ticker">Rails,</small>
 					<small class="card__ticker">Bootstrap</small>
-					<a href="https://frozen-brushlands-73275.herokuapp.com/">
+					<a href="https://frozen-brushlands-73275.herokuapp.com/" target="_blank">
 						<button class="btn btn-info float-right btn-sm card__btn--open">OPEN</button>
 					</a>
 				</div>
