added links to bookmarks card

--- a/app/views/pages/portfolio.html.erb
+++ b/app/views/pages/portfolio.html.erb
@@ -51,7 +51,9 @@
 		<div class="col-xs-12 col-md-6 col-lg-4">
 			<div class="card card--info">
 				<div class="card__img-top-container">
-					<%= image_tag("bookmarks.png", :alt => "rss feed", class: 'card__img-top') %>
+					<a href="https://guarded-castle-56676.herokuapp.com/" target="_blank">
+						<%= image_tag("bookmarks.png", :alt => "rss feed", class: 'card__img-top') %>
+					</a>
 				</div>
 				<div class="card__block">
 					<h4 class="card__title mt-3">Bookmarks</h4>
@@ -64,7 +66,9 @@
 				<div class="card__footer">
 					<small class="card__ticker">Rails,</small>
 					<small class="card__ticker">sqlite3</small>
-					<button class="btn btn-info float-right btn-sm card__btn--open">OPEN</button>
+					<a href="https://guarded-castle-56676.herokuapp.com/" target="_blank">
+						<button class="btn btn-info float-right btn-sm card__btn--open">OPEN</button>
+					</a>
 				</div>
 			</div>
 		</div>
