--- a/app/views/pages/portfolio.html.erb
+++ b/app/views/pages/portfolio.html.erb
@@ -75,7 +75,9 @@
 		<div class="col-xs-12 col-md-6 col-lg-4">
 			<div class="card card--info">
 				<div class="card__img-top-container">
-					<%= image_tag("innovation-cloud.png", :alt => "rss feed", class: 'card__img-top') %>
+					<a href="https://powerful-dusk-10590.herokuapp.com/" target="_blank">
+						<%= image_tag("innovation-cloud.png", :alt => "rss feed", class: 'card__img-top') %>
+					</a>
 				</div>
 				<div class="card__block">
 					<h4 class="card__title mt-3">Innovation Cloud</h4>
@@ -89,7 +91,9 @@
 					<small class="card__ticker">Rails,</small>
 					<small class="card__ticker">Bootstrap,</small>
 					<small class="card__ticker">sqlite3</small>
-					<button class="btn btn-info float-right btn-sm card__btn--open">OPEN</button>
+					<a href="https://powerful-dusk-10590.herokuapp.com/" target="_blank">
+						<button class="btn btn-info float-right btn-sm card__btn--open">OPEN</button>
+					</a>
 				</div>
 			</div>
 		</div>
