Added threadly link

--- a/app/views/pages/portfolio.html.erb
+++ b/app/views/pages/portfolio.html.erb
@@ -150,7 +150,9 @@
 		<div class="col-xs-12 col-md-6 col-lg-4">
 			<div class="card card--info">
 				<div class="card__img-top-container">
-					<%= image_tag("threadly.png", :alt => "rss feed", class: 'card__img-top') %>
+					<a href="https://radiant-peak-49377.herokuapp.com/" target="_blank">
+						<%= image_tag("threadly.png", :alt => "rss feed", class: 'card__img-top') %>
+					</a>
 				</div>
 				<div class="card__block">
 					<h4 class="card__title mt-3">Threadly</h4>
@@ -163,7 +165,9 @@
 				<div class="card__footer">
 					<small class="card__ticker">Rails,</small>
 					<small class="card__ticker">sqlite3</small>
-					<button class="btn btn-info float-right btn-sm card__btn--open">OPEN</button>
+					<a href="https://radiant-peak-49377.herokuapp.com/" target="_blank">
+						<button class="btn btn-info float-right btn-sm card__btn--open">OPEN</button>
+					</a>
 				</div>
 			</div>
 		</div>
