--- a/app/views/pages/portfolio.html.erb
+++ b/app/views/pages/portfolio.html.erb
@@ -174,7 +174,9 @@
 		<div class="col-xs-12 col-md-6 col-lg-4">
 			<div class="card card--info">
 				<div class="card__img-top-container">
-					<%= image_tag("traveler-app.png", :alt => "rss feed", class: 'card__img-top') %>
+					<a href="https://arcane-garden-96547.herokuapp.com/" target="_blank">
+						<%= image_tag("traveler-app.png", :alt => "rss feed", class: 'card__img-top') %>
+					</a>
 				</div>
 				<div class="card__block">
 					<h4 class="card__title mt-3">BokenjiKan</h4>
@@ -187,7 +189,9 @@
 				<div class="card__footer">
 					<small class="card__ticker">Rails,</small>
 					<small class="card__ticker">Bootstrap</small>
-					<button class="btn btn-info float-right btn-sm card__btn--open">OPEN</button>
+					<a href="https://arcane-garden-96547.herokuapp.com/" target="_blank">
+						<button class="btn btn-info float-right btn-sm card__btn--open">OPEN</button>
+					</a>
 				</div>
 			</div>
 		</div>
