--- a/app/assets/stylesheets/_variables.scss
+++ b/app/assets/stylesheets/_variables.scss
@@ -3,6 +3,8 @@ $white: #fafafa;
 $white-hover: #e9e9e9;
 $black: #111;
 
+$main-off-white: #f3f3e161;
+
 $brand-teal: rgb(130, 216, 216);
 $purple-offset: rgba(219, 214, 227, .9);
 $purple-font: rgb(55, 49, 66);
